--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+	<h3>random images</h3>
+	<div class="image-gallery">
+            <img src="https://picsum.photos/id/123/200/300" alt="Random image">
+            <img src="https://picsum.photos/id/124/200/300" alt="Random image">
+            <img src="https://picsum.photos/id/125/200/300" alt="Random image">
+        </div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
