--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 			<li><a href="#">Contact</a></li>
 		</ul>
 	</nav>
-	<h3>random images</h3>
+	<h3>3 random images</h3>
 	<div class="image-gallery">
             <img src="https://picsum.photos/id/123/200/300" alt="Random image">
             <img src="https://picsum.photos/id/124/200/300" alt="Random image">
